--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "core-js": "^2.6.5",
     "fastclick": "^1.0.6",
     "lib-flexible": "^0.3.2",
-    "mint-ui": "^2.2.13",
+    "vant": "^2.2.16",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -38,6 +38,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
